feat(v1.2): 双程序架构+混淆取证+AI增强分析+未知内存马启发式检测
- 双程序架构: --gen-agent 生成随机名/特征混淆取证程序(防识别)
- 取证端: 内置规则匹配引擎, 离线可用, 不含AI能力
- AI增强: OpenAI通用兼容接口(--ai-config/环境变量), 可配可跳过可降级
- 未知内存马: HeuristicAuditor 行为模式组合评分(不依赖已知特征)
- 跨平台内存取证: MemoryForensics jmap 堆dump集成
- 报告重建: Report.fromJson + --analyze 分析取证报告
- 动态自排除: ReflectUtil.isSelfClass 兼容混淆版